# IDS-Sentinel-Terminal

./: .dockerignore  DOWNLOAD_TOOL.md  Dockerfile  INSTALL_FOR_PITCH.md  MANIFEST.in  PUBLISHING.md  README.md  activate_ids_env.ps1  all.py  all_testing.ipynb  compose.yml  pyproject.toml  requirements-app.txt  requirements-classical.txt  requirements-dnn.txt  temp1.py  terminal.cmd  terminal.ps1
.github/workflows/: python-application.yml  release.yml
.ipynb_checkpoints/: all-checkpoint.py
.ipynb_checkpoints/.ipynb_checkpoints/: all_testing-checkpoint-checkpoint.ipynb
.ipynb_checkpoints/classical/: predictedlabelDT.txt  predictedlabelRF.txt
automation/product/: iocs.json  self_learning_model.json
automation/product/exports/: traffic_analysis_20260506_081928.csv  traffic_analysis_20260506_081928.json  traffic_analysis_20260506_081949.csv  traffic_analysis_20260506_081949.json  traffic_analysis_20260506_082152.csv  traffic_analysis_20260506_082152.json  traffic_analysis_20260506_084127.csv  traffic_analysis_20260506_084127.json
automation/runs/classical-45fc41fedadd/: summary.json
classical/: predictedlabelAB.txt  predictedlabelDT.txt  predictedlabelRF.txt  predictedlabelSVM-rbf.txt
dnn/: activate_conda.ps1  dnn1.py  dnn1test.py  dnn2.py  dnn2test.py  dnn2test.py.save  dnn3.py  dnn3test.py  dnn4.py  dnn4test.py  dnn5.py  dnn5test.py  fix_optimizer_warning.py  tempCodeRunnerFile.py
frontend/: app.js  index.html  styles.css
ids_app/: __init__.py  api.py  classical.py  config.py  data.py  dnn.py  jobs.py  legacy.py  metrics.py  product_terminal.py  storage.py  terminal.py
scripts/: build_distributions.py  build_python_package.py  ids-terminal.sh  install_from_release.ps1  install_from_release.sh  install_pitch.ps1  install_pitch.sh  wsl-smoke-check.sh
tools/: TerminalLauncher.cs
(+179 files in other folders)
